--- a/lab/f5-ansible-bigiq-as3-demo/tower/j2/waf_app.j2
+++ b/lab/f5-ansible-bigiq-as3-demo/tower/j2/waf_app.j2
@@ -8,7 +8,7 @@
     "id": "isc-lab",
     "label": "Task3a",
     "remark": "Task 3a - HTTPS Application with WAF",
-    "target": { "address": "10.1.1.7" },
+    "target": { "address": "{{ bigip_address }}" },
     "{{ tenant_name }}": {
       "class": "Tenant",
       "{{ app_name }}": {
