added variable for BIGIP target to delete_app.j2

--- a/lab_new/f5-ansible-bigiq-as3-demo/tower/j2/delete_app.j2
+++ b/lab_new/f5-ansible-bigiq-as3-demo/tower/j2/delete_app.j2
@@ -8,7 +8,7 @@
     "id": "del",
     "label": "del",
     "remark": "Delete AS3 Tenant",
-    "target": { "address": "10.1.1.7" },
+    "target": { "address": "{{ bigip_address }}" },
     "{{ tenant_name }}": {
       "class": "Tenant"
     }
